add variables and functions to create gameboard

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Let's play Snake!</h1>
+    <canvas id="grid" width="300" height="300"></canvas>
     <script src="design.js"></script>
 </body>
 </html>
