--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
     <h1>Let's play Snake!</h1>
     <canvas id="grid" width="360" height="360"></canvas>
+    <div id="scoreText">
+        Score: <div id="score"></div>
+    </div>
     <script src="design.js"></script>
 </body>
 </html>
