--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <canvas id="grid" width="360" height="360"></canvas>
     <div id="scoreText">
         Score: <div id="score"></div>
+        <div id="signature">Created by: Michel Brouillette</div>
     </div>
     <script src="design.js"></script>
 </body>
